# log-analyzer

./: pyproject.toml
src/: main.py  preproccessor.py
