[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["Aleksey Eliseev <alekseyeliseev@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
joblib = "1.4.2"
pandas = "2.2.3"
scikit-learn = "1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
